[gd_scene load_steps=6 format=3 uid="uid://833p2gpb3bdv"]

[ext_resource type="Script" uid="uid://uq2r1gj3cfau" path="res://Scripts/RoomGeneration/RoomGeneration.gd" id="1_gykuq"]
[ext_resource type="TileSet" uid="uid://dgy5axd7187uk" path="res://Assets/Tileset/GlobalTileMap.tres" id="2_m1yd0"]
[ext_resource type="PackedScene" uid="uid://csr0n2s24ehr6" path="res://Scenes/UserInterface.tscn" id="3_dhcqn"]
[ext_resource type="PackedScene" uid="uid://cfljccin2sbyg" path="res://Scenes/Respawn.tscn" id="4_54s8q"]
[ext_resource type="Script" uid="uid://du7l3pmt8akjr" path="res://Scripts/Stats/AttackComponent.gd" id="5_m1yd0"]

[node name="RoomGeneration" type="Node2D"]
script = ExtResource("1_gykuq")

[node name="Rooms" type="Node" parent="."]

[node name="Enemies" type="Node" parent="."]

[node name="RoomMovementWait" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="MSTStart" type="Timer" parent="."]
one_shot = true

[node name="TileMap" type="TileMap" parent="."]
show_behind_parent = true
tile_set = ExtResource("2_m1yd0")
format = 2
layer_0/z_index = -2
layer_1/name = "details"
layer_1/z_index = -1
layer_2/name = "Floors"
layer_2/z_index = -1

[node name="DebugCamera" type="Camera2D" parent="."]
enabled = false
zoom = Vector2(0.5, 0.5)

[node name="UserInterface" parent="." instance=ExtResource("3_dhcqn")]
visible = false

[node name="Respawn2" parent="UserInterface" instance=ExtResource("4_54s8q")]
visible = false

[node name="LevelChangeTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TileDamage" type="Node" parent="."]
script = ExtResource("5_m1yd0")
baseAttack = 0.01
metadata/_custom_type_script = "uid://du7l3pmt8akjr"

[connection signal="timeout" from="RoomMovementWait" to="." method="_on_room_movement_wait_timeout"]
[connection signal="timeout" from="MSTStart" to="." method="_on_mst_start_timeout"]
